[package]
name = "graph"
version = "0.1.0"
authors = ["Pulau_Komodo <example@example.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
imageproc = "0.23.0"
itertools = "0.12.1"
rusttype = "0.9.3"
oklab = "1.0.1"