[package]
name = "graph"
version = "0.1.0"
authors = ["Pulau_Komodo <example@example.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
image = "0.25.2"
imageproc = "0.25.0"
itertools = "0.13.0"
oklab = "1.0.1"
